Fix tweet wrapping in safari, fixes #163

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -122,13 +122,8 @@ iframe {
 }
 
 .tweets ul {
-  display: -webkit-flex;
-  display:     -ms-flexbox;
-  display:         flex;
-  flex-direction: column;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  display: flex;
+  flex-flow: column wrap;
 }
 
 .tweet {
